diesel_compile_tests/tests/fail/distinct_on_requires_matching_order_clause.stderr
error[E0277]: the trait bound `OrderClause<id>: ValidOrderingForDistinct<DistinctOnClause<name>>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:120:58
    |
LL |     let _ = users::table.order_by(users::id).distinct_on(users::name);
    |                                              ----------- ^^^^^^^^^^^ unsatisfied trait bound
    |                                              |
    |                                              required by a bound introduced by this call
    |
    = help: the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<columns::id>`
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              diesel::query_builder::order_clause::OrderClause<(T,)>
              diesel::query_builder::order_clause::OrderClause<T>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>>
    = note: required for `SelectStatement<FromClause<table>, ..., ..., ..., ...>` to implement `DistinctOnDsl<columns::name>`
note: required by a bound in `diesel::QueryDsl::distinct_on`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn distinct_on<Expr>(self, expr: Expr) -> DistinctOn<Self, Expr>
    |        ----------- required by a bound in this associated function
LL |     where
LL |         Self: methods::DistinctOnDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::distinct_on`
 
    
error[E0277]: the trait bound `OrderClause<(id, name)>: ValidOrderingForDistinct<...>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:127:22
    |
LL |         .distinct_on(users::name);
    |          ----------- ^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
    = help: the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>`
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              diesel::query_builder::order_clause::OrderClause<(T,)>
              diesel::query_builder::order_clause::OrderClause<T>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>>
    = note: required for `SelectStatement<FromClause<table>, ..., ..., ..., ...>` to implement `DistinctOnDsl<columns::name>`
note: required by a bound in `diesel::QueryDsl::distinct_on`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn distinct_on<Expr>(self, expr: Expr) -> DistinctOn<Self, Expr>
    |        ----------- required by a bound in this associated function
LL |     where
LL |         Self: methods::DistinctOnDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::distinct_on`
 
    
error[E0277]: the trait bound `OrderClause<(id, name)>: ValidOrderingForDistinct<...>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:134:22
    |
LL |         .distinct_on(users::name);
    |          ----------- ^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
    = help: the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>`
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              diesel::query_builder::order_clause::OrderClause<(T,)>
              diesel::query_builder::order_clause::OrderClause<T>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>>
    = note: required for `SelectStatement<FromClause<table>, ..., ..., ..., ...>` to implement `DistinctOnDsl<columns::name>`
note: required by a bound in `diesel::QueryDsl::distinct_on`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn distinct_on<Expr>(self, expr: Expr) -> DistinctOn<Self, Expr>
    |        ----------- required by a bound in this associated function
LL |     where
LL |         Self: methods::DistinctOnDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::distinct_on`
 
    
error[E0277]: the trait bound `OrderClause<id>: ValidOrderingForDistinct<DistinctOnClause<name>>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:139:60
    |
LL |     let _ = users::table.distinct_on(users::name).order_by(users::id);
    |                                                   -------- ^^^^^^^^^ unsatisfied trait bound
    |                                                   |
    |                                                   required by a bound introduced by this call
    |
    = help: the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<columns::id>`
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              diesel::query_builder::order_clause::OrderClause<(T,)>
              diesel::query_builder::order_clause::OrderClause<T>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>>
    = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<...>, ...>` to implement `OrderDsl<columns::id>`
note: required by a bound in `order_by`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn order_by<Expr>(self, expr: Expr) -> OrderBy<Self, Expr>
    |        -------- required by a bound in this associated function
...
LL |         Self: methods::OrderDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::order_by`
 
    
error[E0277]: the trait bound `OrderClause<id>: ValidOrderingForDistinct<DistinctOnClause<name>>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:145:22
    |
LL |         .distinct_on(users::name)
    |          ----------- ^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
    = help: the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<columns::id>`
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              diesel::query_builder::order_clause::OrderClause<(T,)>
              diesel::query_builder::order_clause::OrderClause<T>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>>
    = note: required for `SelectStatement<FromClause<table>, ..., ..., ..., ...>` to implement `DistinctOnDsl<columns::name>`
note: required by a bound in `diesel::QueryDsl::distinct_on`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn distinct_on<Expr>(self, expr: Expr) -> DistinctOn<Self, Expr>
    |        ----------- required by a bound in this associated function
LL |     where
LL |         Self: methods::DistinctOnDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::distinct_on`
 
    
error[E0277]: the trait bound `OrderClause<(id, name)>: ValidOrderingForDistinct<...>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:153:22
    |
LL |         .distinct_on(users::name)
    |          ----------- ^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
    = help: the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>`
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              diesel::query_builder::order_clause::OrderClause<(T,)>
              diesel::query_builder::order_clause::OrderClause<T>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>>
    = note: required for `SelectStatement<FromClause<table>, ..., ..., ..., ...>` to implement `DistinctOnDsl<columns::name>`
note: required by a bound in `diesel::QueryDsl::distinct_on`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn distinct_on<Expr>(self, expr: Expr) -> DistinctOn<Self, Expr>
    |        ----------- required by a bound in this associated function
LL |     where
LL |         Self: methods::DistinctOnDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::distinct_on`
 
    
error[E0277]: the trait bound `OrderClause<(id, name)>: ValidOrderingForDistinct<...>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:161:22
    |
LL |         .distinct_on((users::name, users::id))
    |          ----------- ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
    = help: the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(columns::name, columns::id)>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>`
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              diesel::query_builder::order_clause::OrderClause<(T,)>
              diesel::query_builder::order_clause::OrderClause<T>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>>
    = note: required for `SelectStatement<FromClause<table>, ..., ..., ..., ...>` to implement `DistinctOnDsl<(columns::name, columns::id)>`
note: required by a bound in `diesel::QueryDsl::distinct_on`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn distinct_on<Expr>(self, expr: Expr) -> DistinctOn<Self, Expr>
    |        ----------- required by a bound in this associated function
LL |     where
LL |         Self: methods::DistinctOnDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::distinct_on`
 
    
error[E0277]: the trait bound `OrderClause<id>: ValidOrderingForDistinct<DistinctOnClause<...>>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:169:22
    |
LL |         .distinct_on((users::name, users::id))
    |          ----------- ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
    = help: the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<(columns::name, columns::id)>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<columns::id>`
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              diesel::query_builder::order_clause::OrderClause<(T,)>
              diesel::query_builder::order_clause::OrderClause<T>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>>
    = note: required for `SelectStatement<FromClause<table>, ..., ..., ..., ...>` to implement `DistinctOnDsl<(columns::name, columns::id)>`
note: required by a bound in `diesel::QueryDsl::distinct_on`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn distinct_on<Expr>(self, expr: Expr) -> DistinctOn<Self, Expr>
    |        ----------- required by a bound in this associated function
LL |     where
LL |         Self: methods::DistinctOnDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::distinct_on`
 
    
error[E0277]: the trait bound `OrderClause<(id, name)>: ValidOrderingForDistinct<...>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:177:22
    |
LL |         .distinct_on(users::name)
    |          ----------- ^^^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
    = help: the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<(columns::id, columns::name)>`
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              diesel::query_builder::order_clause::OrderClause<(T,)>
              diesel::query_builder::order_clause::OrderClause<T>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>>
    = note: required for `SelectStatement<FromClause<table>, ..., ..., ..., ...>` to implement `DistinctOnDsl<columns::name>`
note: required by a bound in `diesel::QueryDsl::distinct_on`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn distinct_on<Expr>(self, expr: Expr) -> DistinctOn<Self, Expr>
    |        ----------- required by a bound in this associated function
LL |     where
LL |         Self: methods::DistinctOnDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::distinct_on`
 
    
error[E0277]: the trait bound `OrderClause<id>: ValidOrderingForDistinct<DistinctOnClause<name>>` is not satisfied
   --> tests/fail/distinct_on_requires_matching_order_clause.rs:185:19
    |
LL |         .order_by(users::id)
    |          -------- ^^^^^^^^^ unsatisfied trait bound
    |          |
    |          required by a bound introduced by this call
    |
    = help: the trait `query_dsl::order_dsl::ValidOrderingForDistinct<DistinctOnClause<columns::name>>` is not implemented for `diesel::query_builder::order_clause::OrderClause<columns::id>`
    = help: the following other types implement trait `query_dsl::order_dsl::ValidOrderingForDistinct<D>`:
              diesel::query_builder::order_clause::OrderClause<(T,)>
              diesel::query_builder::order_clause::OrderClause<T>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Asc<T>>
              diesel::query_builder::order_clause::OrderClause<diesel::expression::operators::Desc<T>>
    = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<...>, ...>` to implement `OrderDsl<columns::id>`
note: required by a bound in `order_by`
   --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
    |
LL |     fn order_by<Expr>(self, expr: Expr) -> OrderBy<Self, Expr>
    |        -------- required by a bound in this associated function
...
LL |         Self: methods::OrderDsl<Expr>,
    |               ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::order_by`
 
    For more information about this error, try `rustc --explain E0277`.
